# CAP-CDSS-MedGemma

./: DISCLAIMER.md  Dockerfile  EVIDENCE.md  README.md  deploy.sh  dev.sh  pyproject.toml  requirements.txt
cap_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: components.json  index.html  package-lock.json  package.json
notebooks/: 01_full_pipeline_demo.ipynb  02_benchmark_evaluation.ipynb  03_cxr_imaging_analysis.ipynb  04_cross_modal_contradictions.ipynb  05_antibiotic_stewardship.ipynb  06_clinical_severity_scoring.ipynb  07_temporal_patient_journey.ipynb  08_reasoning_traces.ipynb  09_safety_overrides.ipynb
scripts/: _generate_benchmark_evaluation_notebook.py  _generate_contradiction_detection_notebook.py  _generate_cxr_analysis_notebook.py  _generate_full_pipeline_demo_notebook.py  _generate_reasoning_traces_notebook.py  _generate_safety_overrides_notebook.py  _generate_severity_scoring_notebook.py  _generate_stewardship_notebook.py  _generate_temporal_journey_notebook.py  export_synthetic_cases.py
server/: __init__.py  demo_cases.py  main.py  mock_responses.py  mock_runner.py  sse.py
tests/: conftest.py  test_benchmark_evaluation_sync.py  test_clinical_logic.py  test_contradiction_detection_sync.py  test_cxr_analysis_sync.py  test_demo_cases.py  test_extraction.py  test_fhir_utils.py  test_full_pipeline_demo_sync.py  test_graph.py  test_models.py  test_pipeline_e2e.py  test_reasoning_traces_sync.py  test_safety_overrides_sync.py  test_severity_scoring_sync.py  test_state.py  test_stewardship_sync.py  test_synthetic_48h.py  (+2 more)
(+127 files in other folders)
